# mpb-latex-ocr

./: .gitignore  README.md  pyproject.toml  wiki.md
configs/: train.yaml
configs/datasets/: kaggle_manifest.yaml  mathwriting.yaml
configs/detection/: yolo_formula.yaml
configs/hardware/: a6000_48gb.yaml  colab_gpu.yaml  kaggle.yaml  rtx5070ti.yaml
configs/model/: deep_cnn.yaml
docs/: model_architecture.md
notebooks/: colab_train.ipynb  kaggle_train.ipynb  kaggle_train_model2.ipynb  local_checkpoint_toy_check.ipynb  local_im2latex_sample_check.ipynb
scripts/: kaggle_preflight.py  make_model_architecture_figure.py
scripts/cdm/: Dockerfile.cdm-lite  patch_unimernet_cdm_windows.py  run_official_cdm_windows.ps1  run_official_cdm_wsl.sh
src/mpb_latex_ocr/: __init__.py  detect.py  detect_train.py  evaluate.py  export_prediction_samples.py  kaggle_model2_prepare.py  make_toy_data.py  page_predict.py  plot_mlruns.py  predict.py  prepare_manifest.py  score_predictions.py  train.py
src/mpb_latex_ocr/data/: datamodule.py  dataset.py  latex_normalize.py  tokenizer.py
src/mpb_latex_ocr/detection/: __init__.py  crops.py  types.py  yolo.py
src/mpb_latex_ocr/metrics/: edit_distance.py  render.py
src/mpb_latex_ocr/models/: encoder_decoder.py  lightning_module.py
tests/: test_dataset.py  test_detection.py  test_edit_distance.py  test_evaluate.py  test_export_prediction_samples.py  test_kaggle_model2_prepare.py  test_models.py  test_plot_mlruns.py  test_prepare_manifest.py  test_render_metric.py  test_score_predictions.py  test_tokenizer.py
(+1 files in other folders)
